--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
   http: ^0.13.4
+  google_maps_flutter: ^2.1.6
 
 dev_dependencies:
   flutter_test:
