--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.0.3
   http: ^0.13.4
   google_maps_flutter: ^2.1.6
+  firebase_core: ^1.17.1
 
 dev_dependencies:
   flutter_test:
