--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   http: ^0.13.4
   google_maps_flutter: ^2.1.6
   firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
+  flutter_native_splash: ^2.2.3
+  firebase_storage: ^10.2.17
+  cloud_firestore: ^3.1.17
 
 dev_dependencies:
   flutter_test:
